# csa-lab3-swaglang

./: .gitignore  golden_asm_test.py  pipeline.py  pyproject.toml  readme.md  translator.py
.github/workflows/: ci.yml  pylint.yml  python-app.yml
SwagLangPrograms/: cat.sl  hello.sl  helloUser.sl  prob2.sl
binary/: cat  hello  helloUser  prob2
golden/: cat_sl.yml  helloUser_sl.yml  hello_sl.yml  prob2_sl.yml
golden_asm_results/: cat_result_20240920_185338.yml  cat_result_20240920_185853.yml  helloUser_result_20240920_185338.yml  helloUser_result_20240920_185853.yml  hello_result_20240920_185338.yml  hello_result_20240920_185853.yml  prob2_result_20240920_185338.yml  prob2_result_20240920_185853.yml
processor/: ALU.py  Clock.py  ControlUnit.py  DataPath.py  Decoder.py  InputDevice.py  OutputDevice.py
translator/: Translator.py
