[tool.poetry]
name = "csa-lab3"
version = "0.1.0"
description = ""
authors = ["notttk <meregodz@gmail.co >"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-golden = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
